added sponsor booth page fixed og:url on all the pages changed conf host from agilefaqs to confengine

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -12,7 +12,7 @@
 
 <!-- Open Graph data -->
 <meta property="og:site_name" content="AppiumConf"/>
-<meta property="og:url" content="https://appiumconf.com/code-of-conduct"/>
+<meta property="og:url" content="https://appiumconf.com/code-of-conduct.html"/>
 <meta property="og:title" content="Code of Conduct"/>
 <meta property="og:description" content="The Official Appium and Mobile Testing Conference"/>
 <meta property="og:type" content="website"/>
@@ -310,10 +310,10 @@
                 </p>
 
 
-                <a class="footer__link" href="https://agilefaqs.com">
+                <a class="footer__link" href="https://confengine.com">
 
 
-                    <img class="footer__image" src="perch/resources/agilefaqs_logo.png" alt="AgileFAQs">
+                    <img class="footer__image" src="perch/resources/confengine_logo.png" alt="ConfEngine Events Pvt Ltd">
 
 
                 </a>
