--- a/sponsor-booths.html
+++ b/sponsor-booths.html
@@ -12,8 +12,8 @@
 
 <!-- Open Graph data -->
 <meta property="og:site_name" content="AppiumConf"/>
-<meta property="og:url" content="https://appiumconf.com/sponsors.html"/>
-<meta property="og:title" content="Sponsors"/>
+<meta property="og:url" content="https://appiumconf.com/sponsor-booths.html"/>
+<meta property="og:title" content="Sponsor Booths"/>
 <meta property="og:description" content="The Official Appium and Mobile Testing Conference"/>
 <meta property="og:type" content="website"/>
 <meta property="og:image" content="https://appiumconf.com/perch/resources/social-card-2-w1200.png"/>
@@ -22,7 +22,7 @@
 <!-- Social sharing meta -->
 <meta name="twitter:site" content="@appium_conf"/>
 <meta name="twitter:url" content="https://appiumconf.com/sponsors"/>
-<meta name="twitter:title" content="Sponsors"/>
+<meta name="twitter:title" content="Sponsor Booths"/>
 <meta name="twitter:description" content="The Official Appium and Mobile Testing Conference"/>
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://appiumconf.com/perch/resources/social-card-2-w1200.png"/>
@@ -180,23 +180,9 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-                <h1 class="page__heading">Sponsors</h1>
+                <h2 class="page__heading">Sponsor Deliverable</h2>
 
-                <div class="page__intro">
-                    <p><strong>Interested in sponsoring AppiumConf?</strong></p>
-
-                    <p>Our sponsorship manager, Naresh Jain, will work with you to come up with creative ways to showcase your brand at the conference. By sponsoring, you can expect a range of benefits:
-                        <br>
-                        <br>• Engage with your target audience of mobile testers
-                        <br>• Showcase your brand, both in the run-up to the conference and onsite
-                        <br>• Show your commitment to developing this industry and the important people in it </p>
-                    <br>
-
-                    <div class="text-center">
-                        <a class="btn btn-primary btn--cta" href="/docs/AppiumConf2019SponsorshipProspectus.pdf" style="color: #505f68">Download Sponsorship Prospectus</a>
-                    </div>
-                </div>
-
+                <p>Please check your sponsor deliverable on the <a href="https://confengine.com/user/my-sponsorship" target="_blank">ConfEngine Site</a></p>
             </div>
         </div>
     </div>
@@ -206,108 +192,92 @@
     <div class="container">
 
         <div class="row row--flex row--flex--center">
-            <h3 class="section__heading">Meet our Sponsors</h3>
+            <h2 class="section__heading">Booth Layout</h2>
         </div>
 
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
 
-                <div class="row">
-                    <div class="col-sm-4">
-                        <a rel="nofollow" href="https://applitools.com/?utm_term=&utm_source=trade-show&utm_medium=&utm_content=field-event&utm_campaign=190613-AppiumConf-India">
-                            <img src="perch/resources/applitools-1.png" alt="Applitools">
-                        </a>
-                    </div>
-                    <div class="col-sm-8">
-                        <header class="section__header section__header--horizontal">
-                            <h2 class="section__heading">
-                                Applitools
-                            </h2>
-                            <p class="section__subheading">Title &amp; Reception Sponsor</p>
-                        </header>
-                        <p>Applitools Eyes is the leading cloud-based Automated Visual Testing solution for web, mobile and desktop apps, helping companies verify that GUI & functionality are properly displayed to the end user, across all devices and browsers.</p>
-                        <a href="https://applitools.com/?utm_term=&utm_source=trade-show&utm_medium=&utm_content=field-event&utm_campaign=190613-AppiumConf-India">Visit Sponsor Site</a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <hr class="divider">
-                    </div>
-                </div>
+                <p>
+                    <img src="/perch/resources/stalls/stall_layout.png" style="max-width: 100%" alt="Stall Layout">
+                </p>
 
+                <p>Stalls will be operation from <strong>9:00 AM to 6:00 PM</strong> on <strong>June 14th and 15th</strong>.</p>
 
-                <div class="row">
-                    <div class="col-sm-4">
-                        <a rel="nofollow" href="https://saucelabs.com/">
-                            <img src="perch/resources/saucelabs-4.png" alt="Sauce Labs">
-                        </a>
-                    </div>
-                    <div class="col-sm-8">
-                        <header class="section__header section__header--horizontal">
-                            <h2 class="section__heading">
-                                Sauce Labs
-                            </h2>
-                            <p class="section__subheading">Title &amp; Reception Sponsor</p>
-                        </header>
-                        <p>Sauce Labs provides the world’s largest cloud-based platform for the automated testing of web and mobile applications. Sauce Labs helps companies accelerate software development cycles, improve application quality, and deploy with confidence across hundreds of browser / OS
-                            platforms, including Windows, Linux, iOS, Android & Mac OS X. Optimized for Continuous integration (CI), Continuous delivery (CD), and DevOps, the Sauce Labs platform is built to handle the most secure data from its customers, who range from Fortune 500 companies to small
-                            businesses worldwide. To date, more than one billion tests have run on the Sauce Labs cloud. For more info or to sign up for a free trial, visit <a href="https://saucelabs.com">saucelabs.com</a>.
-                        </p>
-                        <a href="https://saucelabs.com/">Visit Sponsor Site</a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <hr class="divider">
-                    </div>
-                </div>
+                <p><span style="text-decoration: underline;"><strong>Note</strong></span>: Your stalls will be setup on June 13th late night (11:00 PM onwards) and will be handed over to you on <span style="text-decoration: underline;"><strong>June 14th 7:30 AM</strong></span> for any additional setup.</p>
 
-
-                <div class="row">
-                    <div class="col-sm-4">
-                        <a rel="nofollow" href="https://cloudgrey.io/">
-                            <img src="perch/resources/cloud-grey-1.png" alt="Cloud Grey">
-                        </a>
-                    </div>
-                    <div class="col-sm-8">
-                        <header class="section__header section__header--horizontal">
-                            <h2 class="section__heading">
-                                Cloud Grey
-                            </h2>
-                            <p class="section__subheading">Gold Sponsor</p>
-                        </header>
-                        <p></p>
-                        <a href="https://cloudgrey.io/">Visit Sponsor Site</a>
-                    </div>
+                <div class="text-center">
+                    <a class="btn btn-primary btn--cta" href="mailto:naresh@confengine.com?subject=[Appium Conf] Booth Slot Sign-up" style="color: #505f68">Grab Your Booth Slot</a>
                 </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <hr class="divider">
-                    </div>
-                </div>
+            </div>
+        </div>
+    </div>
 
+</section>
+<section class="section">
 
-                <div class="row">
-                    <div class="col-sm-4">
-                        <a rel="nofollow" href="https://headspin.io">
-                            <img src="perch/resources/headspin-1.png" alt="HeadSpin">
-                        </a>
-                    </div>
-                    <div class="col-sm-8">
-                        <header class="section__header section__header--horizontal">
-                            <h2 class="section__heading">
-                                HeadSpin
-                            </h2>
-                            <p class="section__subheading">Gold Sponsor</p>
-                        </header>
-                        <p></p>
-                        <a href="https://headspin.io">Visit Sponsor Site</a>
-                    </div>
+    <div class="container">
+
+        <div class="row row--flex row--flex--center">
+            <h2 class="section__heading">Booth Details</h2>
+        </div>
+
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+
+                <p>As part of the sponsorship, the conference will be giving a plain Octanorm booth with 2 spot lights, one table and 2 chairs.</p>
+
+                <p><img src="/perch/resources/stalls/both_stalls.jpg" alt="Stalls"></p>
+
+                <p>However if you would like to design and fabricate your booth as per your exact branding needs, we would request you to work directly with our Event Management Company:
+                    <br><b>Harish Kumar. M</b>
+                    <br>Event Circle
+                    <br># 103 Ground Floor Flat No 42/2 2nd Cross
+                    <br>Twin Towers Cashier Layout
+                    <br>Taverekere Bangalore - 500039
+                    <br>Contact Number - +91 9845321405
+                    <br>Email – <a href="mailto:eventcircle81@gmail.com">eventcircle81@gmail.com</a>
+                </p>
+
+                <h3>Title Sponsor Booth Fabrication</h3>
+
+                <div>
+                    <p>3 x 2 Meter - Backdrop wall + 1 Side Wall + Table Branding</p>
+                    <ul>
+                        <li>Fabric print &amp; frames for Backdrop wall - 10' Feet Width x 8' Feet Height x 1 nos</li>
+                        <li>Fabric print &amp; frames for Side Wall - 6' Feet 6" Inches Width x 8' Feet Height x 1 sides</li>
+                        <li>Table Branding - 3' Feet Width x 2' Feet 6" Inches Height x 1 nos</li>
+                        <li>There is no fascia branding for L shape booth</li>
+                    </ul>
+                    <p><img src="/perch/resources/stalls/octonorm_stall_3mtr_x_2_mtr.jpg" alt="Octonorm_Stall_3Mtr_x_2_Mtr" title="Octonorm_Stall_3Mtr_x_2_Mtr"></p>
+
+                    <p>Sample from previous conference:</p>
+
+                    <p><img src="/perch/resources/stalls/title_sponsor.jpg" alt="title_sponsor" title="title_sponsor"></p>
                 </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <hr class="divider">
-                    </div>
+                <h3>Platinum and Gold Sponsor Booth Fabrication</h3>
+
+                <div>
+                    <p>2 x 2 Meter Booth with 3 Side Wall + Fascia + Table Branding</p>
+                    <ul>
+                        <li>Fabric print &amp; frames for backdrop wall &amp; side wall - 6' Feet 6" Inches Width x 8' Feet Height x 3 sides</li>
+                        <li>Fascia Branding - 6' Feet 6" Inches Width x 1' Feet Height x 1 nos</li>
+                        <li>Table Branding - 3' Feet Width x 2' Feet 6" Inches Height x 1 nos</li>
+                    </ul>
+                    <p><img src="/perch/resources/stalls/octonorm_stall_2mtr_x_2_mtr.jpg" alt="Octonorm_Stall_2Mtr_x_2_Mtr" title="Octonorm_Stall_2Mtr_x_2_Mtr"></p>
+
+                    <p>Sample Images from previous conferences:</p>
+
+                    <p style="text-align: center">
+                        <img src="/perch/resources/stalls/mindtree.jpg" alt="mindtree" style="display: inline">
+                        &nbsp;
+                        <img src="/perch/resources/stalls/tw.jpg" alt="tw" style="display: inline">
+                    </p>
+                </div>
+                <p>Contact Mr. Harish at <a href="mailto:eventcircle81@gmail.com">eventcircle81@gmail.com</a> for more details about the stalls.</p>
+
+                <div class="text-center">
+                    <a class="btn btn-primary btn--cta" href="mailto:naresh@confengine.com?subject=[Appium Conf] Booth More Info" style="color: #505f68">More Info</a>
                 </div>
             </div>
         </div>
