--- a/index.html
+++ b/index.html
@@ -4935,10 +4935,10 @@
                 </p>
 
 
-                <a class="footer__link" href="https://agilefaqs.com">
+                <a class="footer__link" href="https://confengine.com">
 
 
-                    <img class="footer__image" src="perch/resources/agilefaqs_logo.png" alt="AgileFAQs">
+                    <img class="footer__image" src="perch/resources/confengine_logo.png" alt="ConfEngine Events Pvt Ltd">
 
 
                 </a>
