--- a/speakers.html
+++ b/speakers.html
@@ -12,7 +12,7 @@
 
 <!-- Open Graph data -->
 <meta property="og:site_name" content="AppiumConf"/>
-<meta property="og:url" content="https://appiumconf.com/speakers"/>
+<meta property="og:url" content="https://appiumconf.com/speakers.html"/>
 <meta property="og:title" content="Speakers"/>
 <meta property="og:description" content="The Official Appium and Mobile Testing Conference"/>
 <meta property="og:type" content="website"/>
@@ -1281,10 +1281,10 @@
                 </p>
 
 
-                <a class="footer__link" href="https://agilefaqs.com">
+                <a class="footer__link" href="https://confengine.com">
 
 
-                    <img class="footer__image" src="perch/resources/agilefaqs_logo.png" alt="AgileFAQs">
+                    <img class="footer__image" src="perch/resources/confengine_logo.png" alt="ConfEngine Events Pvt Ltd">
 
 
                 </a>
