--- a/workshops.html
+++ b/workshops.html
@@ -12,7 +12,7 @@
 
 <!-- Open Graph data -->
 <meta property="og:site_name" content="AppiumConf"/>
-<meta property="og:url" content="https://appiumconf.com/workshops"/>
+<meta property="og:url" content="https://appiumconf.com/workshops.html"/>
 <meta property="og:title" content="Workshops"/>
 <meta property="og:description" content="The Official Appium and Mobile Testing Conference"/>
 <meta property="og:type" content="website"/>
@@ -424,10 +424,10 @@
                 </p>
 
 
-                <a class="footer__link" href="https://agilefaqs.com">
+                <a class="footer__link" href="https://confengine.com">
 
 
-                    <img class="footer__image" src="perch/resources/agilefaqs_logo.png" alt="AgileFAQs">
+                    <img class="footer__image" src="perch/resources/confengine_logo.png" alt="ConfEngine Events Pvt Ltd">
 
 
                 </a>
