--- a/speakers.html
+++ b/speakers.html
@@ -1214,18 +1214,40 @@
         </div>
 
         <div class="row row--flex row--flex--center">
+            <h4 class="section__heading">Platinum Sponsor</h4>
+        </div>
+        <div class="row row--flex row--flex--center">
+            <div class="col-md-3 col-sm-6">
+                <a rel="nofollow" href="https://www.pcloudy.com/">
+                    <img src="perch/resources/pcloudy-w350@2x.png?t=1" alt="pCloudy">
+                </a>
+            </div>
+        </div>
+
+        <div class="row row--flex row--flex--center">
             <h4 class="section__heading">Gold Sponsor</h4>
         </div>
         <div class="row row--flex row--flex--center">
             <div class="col-md-3 col-sm-6">
+                <a rel="nofollow" href="https://www.genymobile.com/">
+                    <img src="perch/resources/genymobile-w350@2x.png?t=1" alt="genymobile">
+                </a>
+            </div>
+        </div>
+
+        <div class="row row--flex row--flex--center">
+            <h4 class="section__heading">Track Sponsor</h4>
+        </div>
+        <div class="row row--flex row--flex--center">
+            <div class="col-md-3 col-sm-6">
                 <a rel="nofollow" href="https://cloudgrey.io">
-                    <img src="perch/resources/cloud-grey-1-w400@2x.png" alt="Cloud Grey">
+                    <img src="perch/resources/cloud-grey-1-w400@2x.png?t=1" alt="Cloud Grey">
                 </a>
             </div>
 
             <div class="col-md-3 col-sm-6">
-                <a rel="nofollow" href="https://headspin.io">
-                    <img src="perch/resources/headspin-2-w400@2x.png" alt="HeadSpin">
+                <a rel="nofollow" href="http://bit.ly/bugasura">
+                    <img src="perch/resources/bugasura-w350@2x.png?t=1" alt="Bagasura">
                 </a>
             </div>
         </div>
