--- a/sponsors.html
+++ b/sponsors.html
@@ -262,6 +262,51 @@
                     </div>
                 </div>
 
+                <div class="row">
+                    <div class="col-sm-4">
+                        <a rel="nofollow" href="https://www.pcloudy.com/">
+                            <img src="perch/resources/pcloudy-1.png" alt="pCloudy">
+                        </a>
+                    </div>
+                    <div class="col-sm-8">
+                        <header class="section__header section__header--horizontal">
+                            <h2 class="section__heading">
+                                pCloudy
+                            </h2>
+                            <p class="section__subheading">Platinum Sponsor</p>
+                        </header>
+                        <p><a href="https://www.pcloudy.com" target="_blank" rel="noopener">pCloudy.com</a>, based out of California is the next-gen mobile app testing platform powered by emerging technologies like AI and Predictive Analytics. With more than 50,000 users across the globe, it is one-of-its-kind full life cycle testing platform for mobile apps developers, QA and mobile DevOps teams. It offers tools for mobile DevOps, including test automation, manual testing, performance testing for web &amp; mobile applications on over 5000 device-browser combinations. It also enables mobile application testing across a large section of real mobile devices and seamlessly integrates with Continuous Integration tools. pCloudy provides On Premise, Private and Public device cloud solutions which enterprises can choose from based on their needs. It has also been recognized by top industry analysts including Gartner and Forrester that included the products in latest report on mobile testing tool landscape.</p>
+                        <a href="https://www.pcloudy.com/">Visit Sponsor Site</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <hr class="divider">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-4">
+                        <a rel="nofollow" href="https://www.genymobile.com/">
+                            <img src="perch/resources/genymobile-1.png" alt="Genymobile">
+                        </a>
+                    </div>
+                    <div class="col-sm-8">
+                        <header class="section__header section__header--horizontal">
+                            <h2 class="section__heading">
+                                Genymobile
+                            </h2>
+                            <p class="section__subheading">Gold Sponsor</p>
+                        </header>
+                        <p>We help companies build their future with Android. Taking it a step further with Genymotion Cloud, a whole world of test automation and collaboration capabilities at your fingertips.</p>
+                        <a href="https://www.genymobile.com/">Visit Sponsor Site</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <hr class="divider">
+                    </div>
+                </div>
 
                 <div class="row">
                     <div class="col-sm-4">
@@ -274,9 +319,9 @@
                             <h2 class="section__heading">
                                 Cloud Grey
                             </h2>
-                            <p class="section__subheading">Gold Sponsor</p>
+                            <p class="section__subheading">Track Sponsor</p>
                         </header>
-                        <p></p>
+                        <p>We know more about leveraging Appium for mobile testing than anyone else. That's because we've spent more time in Appium's codebase than anyone else. We're a group of mobile automation experts who will help you get started or get finished with your mobile app testing or CI.</p>
                         <a href="https://cloudgrey.io/">Visit Sponsor Site</a>
                     </div>
                 </div>
@@ -289,19 +334,19 @@
 
                 <div class="row">
                     <div class="col-sm-4">
-                        <a rel="nofollow" href="https://headspin.io">
-                            <img src="perch/resources/headspin-1.png" alt="HeadSpin">
+                        <a rel="nofollow" href="http://bit.ly/bugasura">
+                            <img src="perch/resources/bugasura-1.png" alt="Bagasura">
                         </a>
                     </div>
                     <div class="col-sm-8">
                         <header class="section__header section__header--horizontal">
                             <h2 class="section__heading">
-                                HeadSpin
+                                Bagasura
                             </h2>
-                            <p class="section__subheading">Gold Sponsor</p>
+                            <p class="section__subheading">Track Sponsor</p>
                         </header>
-                        <p></p>
-                        <a href="https://headspin.io">Visit Sponsor Site</a>
+                        <p>Moolya Testing has been a CDT focused testing and automation solutions company by testers turning entrepreneurs. It has served about 100+ customers with its ~200 passionate testers so far. Moolya has taken the responsibility to build tools that QA Testers and Automation Engineers need but didn’t know how to ask for.</p>
+                        <a href="http://bit.ly/bugasura">Visit Sponsor Site</a>
                     </div>
                 </div>
                 <div class="row">
