added headspin as sponsor

--- a/sponsors.html
+++ b/sponsors.html
@@ -310,6 +310,29 @@
 
                 <div class="row">
                     <div class="col-sm-4">
+                        <a rel="nofollow" href="https://www.headspin.io/">
+                            <img src="perch/resources/headspin-1.png" alt="HeadSpin">
+                        </a>
+                    </div>
+                    <div class="col-sm-8">
+                        <header class="section__header section__header--horizontal">
+                            <h2 class="section__heading">
+                                HeadSpin
+                            </h2>
+                            <p class="section__subheading">Gold Sponsor</p>
+                        </header>
+                        <p>HeadSpin offers cutting-edge mobile testing and performance solutions with robust reporting, workflow integration and data policies.</p>
+                        <a href="https://www.headspin.io//">Visit Sponsor Site</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <hr class="divider">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-4">
                         <a rel="nofollow" href="https://cloudgrey.io/">
                             <img src="perch/resources/cloud-grey-1.png" alt="Cloud Grey">
                         </a>
