--- a/speakers.html
+++ b/speakers.html
@@ -1233,6 +1233,11 @@
                     <img src="perch/resources/genymobile-w350@2x.png?t=1" alt="genymobile">
                 </a>
             </div>
+            <div class="col-md-3 col-sm-6">
+                <a rel="nofollow" href="https://www.headspin.io//">
+                    <img src="perch/resources/headspin-2-w400@2x.png" alt="HeadSpin">
+                </a>
+            </div>
         </div>
 
         <div class="row row--flex row--flex--center">
