changed genymotion from genymobile removed speakers.html updated Vivek's title and Wim's photo

--- a/sponsors.html
+++ b/sponsors.html
@@ -287,19 +287,19 @@
 
                 <div class="row">
                     <div class="col-sm-4">
-                        <a rel="nofollow" href="https://www.genymobile.com/">
-                            <img src="perch/resources/genymobile-1.png" alt="Genymobile">
+                        <a rel="nofollow" href="https://www.genymotion.com">
+                            <img src="perch/resources/genymotion-1.png" alt="Genymotion">
                         </a>
                     </div>
                     <div class="col-sm-8">
                         <header class="section__header section__header--horizontal">
                             <h2 class="section__heading">
-                                Genymobile
+                                Genymotion
                             </h2>
                             <p class="section__subheading">Gold Sponsor</p>
                         </header>
-                        <p>We help companies build their future with Android. Taking it a step further with Genymotion Cloud, a whole world of test automation and collaboration capabilities at your fingertips.</p>
-                        <a href="https://www.genymobile.com/">Visit Sponsor Site</a>
+                        <p>Based out of Paris and San Francisco, Genymotion is the leading Android Emulator on Desktop and Cloud with over 8 million users. Run parallel tests with Appium on Android using Genymotion Cloud as it runs not only in a SaaS platform but also as virtual images on AWS, GCP, Alibaba Cloud or Microsoft Azure (PaaS). Today, our solution enables Android app developers to scale their automated tests and reduce time-to-market of their apps which has made it an integral part of the testing tool stack at innovative tech companies like Facebook, Microsoft, Twitter, Toast, Blackberry Messenger and more.</p>
+                        <a href="https://www.genymotion.com">Visit Sponsor Site</a>
                     </div>
                 </div>
                 <div class="row">
