--- a/workshops.html
+++ b/workshops.html
@@ -372,8 +372,8 @@
         </div>
         <div class="row row--flex row--flex--center">
             <div class="col-md-3 col-sm-6">
-                <a rel="nofollow" href="https://www.genymobile.com/">
-                    <img src="perch/resources/genymobile-w350@2x.png?t=1" alt="genymobile">
+                <a rel="nofollow" href="https://www.genymotion.com">
+                    <img src="perch/resources/genymotion-w350@2x.png?t=3" alt="genymotion">
                 </a>
             </div>
             <div class="col-md-3 col-sm-6">
