pointing video button to youtube instead of broken talks.html page

--- a/index.html
+++ b/index.html
@@ -4799,7 +4799,7 @@
                 <p></p>
                 <div class="text-center">
 
-                    <a class="btn btn-primary btn--cta" href="talks.html">
+                    <a class="btn btn-primary btn--cta" href="https://www.youtube.com/watch?list=PLhr2WKNPXcZOmOf1k2aqkbMZwnZb2pSZL&v=drpTRKfRnhQ" target="_blank">
                         Watch 2018 videos
                     </a>
 
