--- a/sponsors.html
+++ b/sponsors.html
@@ -322,7 +322,32 @@
                             <p class="section__subheading">Gold Sponsor</p>
                         </header>
                         <p>HeadSpin offers cutting-edge mobile testing and performance solutions with robust reporting, workflow integration and data policies.</p>
-                        <a href="https://www.headspin.io//">Visit Sponsor Site</a>
+                        <a href="https://www.headspin.io/">Visit Sponsor Site</a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <hr class="divider">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-4">
+                        <a rel="nofollow" href="https://testproject.io/">
+                            <img src="perch/resources/testproject-1.png" alt="TestProject">
+                        </a>
+                    </div>
+                    <div class="col-sm-8">
+                        <header class="section__header section__header--horizontal">
+                            <h2 class="section__heading">
+                                TestProject
+                            </h2>
+                            <p class="section__subheading">Gold Sponsor</p>
+                        </header>
+                        <p><a href="https://testproject.io/">TestProject</a> is a first of its kind free community powered test automation platform designed for agile teams. It is built on top of Selenium and Appium, supports all major operating systems, and enables every member of your software team to test Web, Android and iOS apps, effortlessly.</p>
+                        <p>TestProject provides developers and automation teams many powerful tools in a simple package, enabling them to easily collaborate while locally creating, running and analyzing their test automation. With TestProject you can use advanced built-in recording capabilities, create and use addons (automation actions shared by the entire community), or develop coded tests using TestProject&rsquo;s powerful SDK.</p>
+                        <p>Our mission is to create a powerful and collaborative environment for the entire test automation community, without any barriers, and for free.</p>
+                        <a href="https://testproject.io/">Visit Sponsor Site</a>
                     </div>
                 </div>
                 <div class="row">
