--- a/location.html
+++ b/location.html
@@ -308,14 +308,19 @@
             <h4 class="section__heading">Gold Sponsor</h4>
         </div>
         <div class="row row--flex row--flex--center">
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-3 col-sm-4">
                 <a rel="nofollow" href="https://www.genymotion.com">
                     <img src="perch/resources/genymotion-w350@2x.png?t=3" alt="genymotion">
                 </a>
             </div>
-            <div class="col-md-3 col-sm-6">
-                <a rel="nofollow" href="https://www.headspin.io//">
+            <div class="col-md-3 col-sm-4">
+                <a rel="nofollow" href="https://www.headspin.io/">
                     <img src="perch/resources/headspin-2-w400@2x.png" alt="HeadSpin">
+                </a>
+            </div>
+            <div class="col-md-3 col-sm-4">
+                <a rel="nofollow" href="https://testproject.io/">
+                    <img src="perch/resources/testproject-w350@2x.png" alt="TestProject">
                 </a>
             </div>
         </div>
