updated Getting Started with Appium desc

--- a/workshops.html
+++ b/workshops.html
@@ -212,16 +212,16 @@
                     <h2 class="workshop__title">Getting Started with Appium</h2>
                     <div class="workshop__description">
                         <p>Appium is an open-source tool for automating native, mobile web, and hybrid applications on iOS mobile, Android mobile, and Windows desktop platforms. It is "cross-platform" and allows you to write tests against multiple platforms (iOS, Android, Windows), using the same API. This enables code reuse between iOS, Android, and Windows test suites.</p>
-                            <p>This workshop will help you get started with Appium by covering key concepts like:</p>
-                            <ul>
-                                <li>Client/Server Architecture</li>
-                                <li>Session</li>
-                                <li>Desired Capabilities</li>
-                                <li>Appium Server</li>
-                                <li>Appium Clients</li>
-                                <li>Appium Desktop</li>
-                            </ul>
-                            <p>Think of this as a one-day crash course in Appium.</p>
+                        <p>This workshop will help you get started with Appium by covering key concepts like:</p>
+                        <ul>
+                            <li>Client/Server Architecture</li>
+                            <li>Session</li>
+                            <li>Desired Capabilities</li>
+                            <li>Appium Server</li>
+                            <li>Appium Clients</li>
+                            <li>Appium Desktop</li>
+                        </ul>
+                        <p>Think of this as a one-day crash course in Appium. The course will be prepared in NodeJS but there will be help for those who want to get started in Java.</p>
                     </div>
                     <div class="workshop__link">
                         <a class="btn btn-primary btn--cta" href="https://confengine.com/appium-conf-2019/proposal/9487/getting-started-with-appium">Read more</a>
@@ -229,15 +229,15 @@
                 </div>
                 <div class="col-sm-4 col-md-3">
                     <figure class="avatar">
+                        <img class="avatar__image" src="https://www.gravatar.com/avatar/9a0b0a35b95dbaae11596f5868515ffa?s=201&r=pg&d=mm" alt="Bruno Alassia">
+                    </figure>
+
+                    <figure class="avatar">
                         <img class="avatar__image" src="https://res.cloudinary.com/dnnqsdghx/image/upload/w_201,h_201,f_auto,q_auto:best,c_thumb,g_face,z_0.8/v1530451338/ProfilePics/xhizslpehqqsocaratdj.jpg" alt="Anand Bagmar">
                     </figure>
 
                     <figure class="avatar">
                         <img class="avatar__image" src="https://res.cloudinary.com/dnnqsdghx/image/upload/w_201,h_201,f_auto,q_auto:best,c_thumb,g_face,z_0.8/v1518181675/ProfilePics/tepnpiddlsi3nfwaq44v.jpg" alt="Pooja Shah">
-                    </figure>
-
-                    <figure class="avatar">
-                        <img class="avatar__image" src="https://www.gravatar.com/avatar/9a0b0a35b95dbaae11596f5868515ffa?s=201&r=pg&d=mm" alt="Bruno Alassia">
                     </figure>
                 </div>
             </div>
